--- a/css/style.css
+++ b/css/style.css
@@ -220,19 +220,17 @@ a {
 .logo {
   width: 50px;
   height: 50px;
-}
-@media screen and (min-width: 360px) and (max-width: 767px) {
-  .logo {
-    margin: 0 auto;
-  }
-}
-.logo {
   /* Mobile: centraliza forçadamente
   @include mixin.responsive(mobile) {
     margin: 0 auto;
     position: relative;
     z-index: 1;
   } */
+}
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .logo {
+    margin: 0 auto;
+  }
 }
 
 /* Botão Hamburguer */
@@ -430,6 +428,4 @@ a {
 body {
   background: #f9f4f0;
   /*overflow-x: hidden;*/
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
