--- a/css/style.css
+++ b/css/style.css
@@ -443,7 +443,7 @@ a {
 
 .stats-mountain {
   position: absolute;
-  background-image: url("/assets/images/Mountain.png");
+  background-image: url("../../../assets/images/Mountain.png");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
@@ -452,7 +452,7 @@ a {
 
 .stats-clouds {
   position: absolute;
-  background-image: url("/assets/images/clouds.png");
+  background-image: url("../../../assets/images/clouds.png");
   width: 100%;
   height: 120%;
   background-size: cover;
