--- a/css/sass/sections/_hearder.scss
+++ b/css/sass/sections/_hearder.scss
@@ -152,7 +152,7 @@ background: rgba(0, 0, 0, 0.95);
 
 .nav-mobile.open {
   display: flex;
-  border: 1px solid red;
+  border: 1px solid green;
  
   
 }
