--- a/css/sass/sections/_home-sections.scss
+++ b/css/sass/sections/_home-sections.scss
@@ -157,7 +157,7 @@
 .stats-mountain{
     position: absolute;
     
-    background-image: url('../../../assets/images/Mountain.png');
+    background-image: url(../../../assets/images/Mountain.png);
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
@@ -166,7 +166,7 @@
 
   .stats-clouds{
     position: absolute;
-    background-image: url('../../../assets/images/clouds.png');
+    background-image: url(../../../assets/images/clouds.png);
     width: 100%;
     height: 120%;
     background-size: cover;
