--- a/css/sass/sections/_home-sections.scss
+++ b/css/sass/sections/_home-sections.scss
@@ -149,8 +149,8 @@
     background: #f9f4f0;
  
     display: flex;
-    align-items: center;
-     justify-content: flex-end;    /* joga tudo pra direita */
+    align-items: center; /* alinha o item na vertical */
+    justify-content: flex-end;    
    
 }
 
@@ -191,13 +191,13 @@
     display: block;
     font-weight: 800;
     font-family: 'Montserrat', sans-serif;
-    font-variant-numeric: tabular-nums;  
+    font-variant-numeric: tabular-nums;  /*renders numeric characters with a uniform width*/
    
     
 
     &::before{
         content: '+';
-        margin-right: 2px;
+        margin-right: 5px;
        
     }
   }
