--- a/css/sass/sections/_tours.scss
+++ b/css/sass/sections/_tours.scss
@@ -34,7 +34,7 @@
     transition: transform 0.3s ease;
     
    @include mix.responsive(mobile){
-     width: 400px;    
+     width: 100%;    
     }
     
 }
