--- a/css/sass/base/_mixin-layout.scss
+++ b/css/sass/base/_mixin-layout.scss
@@ -20,8 +20,12 @@ $container-mobile: 360px; //Celulares pequenos
     }
 
     @else if $device == mobile {
-        @media screen and (min-width: $container-mobile) and (max-width: #{$container-tablet - 1}){
+        /*@media screen and (min-width: $container-mobile) and (max-width: #{$container-tablet - 1}){
             @content;
+        }*/
+
+        @media screen and (max-width: #{$container-tablet - 1}){
+          @content;
         }
     }
 }
@@ -39,7 +43,8 @@ $container-mobile: 360px; //Celulares pequenos
   }
 
   @include responsive(mobile) {
-    max-width: $container-mobile; // 360px
+    /*max-width: $container-mobile; // 360px*/
+    max-width: 100%;
     padding: 0 8px;
   }
 }
