--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,15 @@
     padding: 0 12px;
   }
 }
-@media screen and (min-width: 360px) and (max-width: 767px) {
+.container {
+  /*@media screen and (min-width: $container-mobile) and (max-width: 767px){
+      @content;
+  }*/
+}
+@media screen and (max-width: 767px) {
   .container {
-    max-width: 360px;
+    /*max-width: $container-mobile; // 360px*/
+    max-width: 100%;
     padding: 0 8px;
   }
 }
@@ -440,6 +446,12 @@ a {
   align-items: center; /* alinha o item na vertical */
   justify-content: flex-end;
 }
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .stats-Container {
+    min-height: 60vh;
+    max-height: 60vh;
+  }
+}
 
 .stats-mountain {
   position: absolute;
@@ -448,6 +460,12 @@ a {
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
+}
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .stats-mountain {
+    background-position: center;
+    background-size: contain;
+  }
 }
 
 .stats-clouds {
@@ -461,11 +479,16 @@ a {
   transition: transform 0.1s ease-in;
   top: 0;
 }
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .stats-clouds {
+    top: 0;
+    bottom: 0;
+  }
+}
 
 .stats-data {
   padding: 64px 32px;
   z-index: 3;
-  border: 1px solid green;
   margin-right: 50px;
 }
 
@@ -477,6 +500,11 @@ a {
   font-family: "Montserrat", sans-serif;
   font-variant-numeric: tabular-nums; /*renders numeric characters with a uniform width*/
 }
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .counter {
+    font-size: 40px;
+  }
+}
 .counter::before {
   content: "+";
   margin-right: 5px;
@@ -487,6 +515,11 @@ a {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   color: #252626;
+}
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .counter-desc {
+    font-size: 20px;
+  }
 }
 
 .journeys {
@@ -520,7 +553,7 @@ a {
 }
 @media screen and (min-width: 360px) and (max-width: 767px) {
   .journey-card {
-    width: 400px;
+    width: 100%;
   }
 }
 
