--- a/css/style.css
+++ b/css/style.css
@@ -6,31 +6,6 @@
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 90px 16px;
-}
-@media screen and (min-width: 768px) and (max-width: 1279px) {
-  .container {
-    max-width: 768px;
-    padding: 0 12px;
-  }
-}
-.container {
-  /*@media screen and (min-width: $container-mobile) and (max-width: 767px){
-      @content;
-  }*/
-}
-@media screen and (max-width: 767px) {
-  .container {
-    /*max-width: $container-mobile; // 360px*/
-    max-width: 100%;
-    padding: 0 8px;
-  }
-}
-
-.container {
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
   padding: 16px;
 }
 @media screen and (min-width: 768px) and (max-width: 1279px) {
@@ -463,8 +438,8 @@ a {
 }
 @media screen and (min-width: 360px) and (max-width: 767px) {
   .stats-mountain {
-    background-position: center;
-    background-size: contain;
+    background-position: center bottom;
+    background-size: cover;
   }
 }
 
@@ -481,8 +456,8 @@ a {
 }
 @media screen and (min-width: 360px) and (max-width: 767px) {
   .stats-clouds {
-    top: 0;
-    bottom: 0;
+    height: 150%;
+    background-position: center;
   }
 }
 
