--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -8,7 +8,8 @@
 @use 'sections/hearder.scss';
 @use 'sections/home-sections';
 @use 'sections/tours';
-
+@use 'sections/customers';
+@use 'sections/footer';
 
 *{
     padding: 0;
