--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,18 @@
   padding-top: 16px;
 }
 
+.pt-24 {
+  padding-top: 24px;
+}
+
+.pt-32 {
+  padding-top: 32px;
+}
+
+.pt-36 {
+  padding-top: 36px;
+}
+
 .pb-16 {
   padding-bottom: 16px;
 }
@@ -635,6 +647,142 @@ a {
 .custom-tours {
   margin-top: 80px;
   text-align: center;
+}
+
+.customers-bg {
+  background-image: url("/assets/images/customers.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 80vh;
+  position: relative;
+  margin-top: 20px;
+}
+
+.title {
+  text-align: center;
+}
+
+.customer-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.7s ease-in-out;
+  opacity: 0;
+  position: absolute;
+  bottom: 50px;
+  transform: translateY(50px);
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 50px;
+}
+
+.customer-container.active {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.customer-content {
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 7px;
+  padding: 20px;
+  max-width: 800px;
+  align-items: center;
+  position: absolute;
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
+}
+
+.customer-msg {
+  font-size: 21px;
+  line-height: 1.8;
+  text-align: center;
+}
+
+.customer-name {
+  text-align: center;
+  padding-top: 10px;
+  font-size: 20px;
+}
+
+/* Indicadores de navegação */
+.slide-indicators {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  position: absolute;
+  left: 50%;
+  bottom: 29%;
+}
+
+.indicator {
+  width: 12px;
+  height: 12px;
+  border-radius: 12px;
+  background-color: rgba(255, 255, 255, 0.4);
+  cursor: pointer;
+}
+
+.indicator.active {
+  background-color: white;
+  transform: scale(1.5);
+  border-color: rgba(255, 255, 255, 0.8);
+}
+
+footer {
+  background: #9eaaa0;
+  margin-top: 10px;
+  padding: 32px;
+  color: #f9f9f9;
+  font-family: "Montserrat", sans-serif;
+}
+
+.footer-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 24px;
+  }
+  .footer-container > div:nth-child(1) {
+    order: 3;
+  }
+  .footer-container > div:nth-child(2) {
+    order: 1;
+  }
+  .footer-container > div:nth-child(3) {
+    order: 2;
+  }
+}
+
+.footer-logo {
+  width: 200px;
+  padding-bottom: 16px;
+}
+
+.linkfooter {
+  color: #f9f9f9;
+  display: block;
+  padding-top: 20px;
+  transition: color 0.3s ease;
+}
+.linkfooter:hover {
+  color: #FF6B35;
+}
+
+footer h4 {
+  font-weight: bolder;
+  text-transform: uppercase;
+}
+
+footer p {
+  color: #f9f9f9;
 }
 
 * {
