--- a/css/style.css
+++ b/css/style.css
@@ -179,14 +179,14 @@ a {
   width: 40px;
   height: 40px;
 }
+.arrow-btn img {
+  transition: transform 0.2s;
+}
 @media screen and (min-width: 360px) and (max-width: 767px) {
   .arrow-btn img {
     width: 35px;
     height: 35px;
   }
-}
-.arrow-btn img {
-  transition: transform 0.2s;
 }
 .arrow-btn img:hover {
   transform: scale(1.2);
@@ -258,19 +258,17 @@ a {
 .logo {
   width: 50px;
   height: 50px;
-}
-@media screen and (min-width: 360px) and (max-width: 767px) {
-  .logo {
-    margin: 0 auto;
-  }
-}
-.logo {
   /* Mobile: centraliza forçadamente
   @include mixin.responsive(mobile) {
     margin: 0 auto;
     position: relative;
     z-index: 1;
   } */
+}
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .logo {
+    margin: 0 auto;
+  }
 }
 
 /* Botão Hamburguer */
@@ -597,7 +595,8 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .journey-card span {
@@ -744,20 +743,19 @@ footer {
 }
 @media screen and (min-width: 360px) and (max-width: 767px) {
   .footer-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    grid-template-columns: 1fr;
     text-align: center;
+    justify-items: center;
     gap: 24px;
   }
   .footer-container > div:nth-child(1) {
-    order: 3;
+    grid-row: 3;
   }
   .footer-container > div:nth-child(2) {
-    order: 1;
+    grid-row: 1;
   }
   .footer-container > div:nth-child(3) {
-    order: 2;
+    grid-row: 2;
   }
 }
 
@@ -794,6 +792,4 @@ footer p {
 body {
   background: #f9f4f0;
   /*overflow-x: hidden;*/
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
