fixing img avif

--- a/css/sass/sections/_customers.scss
+++ b/css/sass/sections/_customers.scss
@@ -2,7 +2,7 @@
 
 
 .customers-bg{
-    background-image: url('../assets/images/customers.jpg'); //tratar a img
+    background-image: url('../assets/images/customers.avif'); //tratar a img
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
