--- a/css/style.css
+++ b/css/style.css
@@ -649,7 +649,7 @@ a {
 }
 
 .customers-bg {
-  background-image: url("/assets/images/customers.jpg");
+  background-image: url("../assets/images/customers.avif");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
