--- a/css/sass/sections/_footer.scss
+++ b/css/sass/sections/_footer.scss
@@ -24,10 +24,12 @@ footer{
     justify-items: center; // centraliza os blocos no grid
     gap: 24px;
 
-    // Reordena os blocos (1 = primeira linha, etc.)
+    > div:nth-child(1) {grid-row: 3;}
+    
+    /* Reordena os blocos (1 = primeira linha, etc.)
     > div:nth-child(1) { grid-row: 3; } // logo e endereço por último
     > div:nth-child(2) { grid-row: 1; } // About primeiro
-    > div:nth-child(3) { grid-row: 2; } // Quick Links depois
+    > div:nth-child(3) { grid-row: 2; } // Quick Links depois*/
 
 
     }
@@ -36,6 +38,10 @@ footer{
 .footer-logo{
     width: 200px;
     padding-bottom: 16px;
+
+    @include mixin.responsive(mobile){
+        margin-top: 17px;
+    }
 }
 
 .linkfooter{
@@ -53,6 +59,8 @@ footer{
 footer h4{
     font-weight: bolder;
     text-transform: uppercase;
+    
+    margin-top: 17px;
 }
 
 footer p {
