--- a/css/style.css
+++ b/css/style.css
@@ -179,14 +179,14 @@ a {
   width: 40px;
   height: 40px;
 }
-.arrow-btn img {
-  transition: transform 0.2s;
-}
 @media screen and (min-width: 360px) and (max-width: 767px) {
   .arrow-btn img {
     width: 35px;
     height: 35px;
   }
+}
+.arrow-btn img {
+  transition: transform 0.2s;
 }
 .arrow-btn img:hover {
   transform: scale(1.2);
@@ -258,17 +258,19 @@ a {
 .logo {
   width: 50px;
   height: 50px;
+}
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .logo {
+    margin: 0 auto;
+  }
+}
+.logo {
   /* Mobile: centraliza forçadamente
   @include mixin.responsive(mobile) {
     margin: 0 auto;
     position: relative;
     z-index: 1;
   } */
-}
-@media screen and (min-width: 360px) and (max-width: 767px) {
-  .logo {
-    margin: 0 auto;
-  }
 }
 
 /* Botão Hamburguer */
@@ -595,8 +597,7 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .journey-card span {
@@ -751,17 +752,22 @@ footer {
   .footer-container > div:nth-child(1) {
     grid-row: 3;
   }
-  .footer-container > div:nth-child(2) {
-    grid-row: 1;
-  }
-  .footer-container > div:nth-child(3) {
-    grid-row: 2;
+  .footer-container {
+    /* Reordena os blocos (1 = primeira linha, etc.)
+    > div:nth-child(1) { grid-row: 3; } // logo e endereço por último
+    > div:nth-child(2) { grid-row: 1; } // About primeiro
+    > div:nth-child(3) { grid-row: 2; } // Quick Links depois*/
   }
 }
 
 .footer-logo {
   width: 200px;
   padding-bottom: 16px;
+}
+@media screen and (min-width: 360px) and (max-width: 767px) {
+  .footer-logo {
+    margin-top: 17px;
+  }
 }
 
 .linkfooter {
@@ -777,6 +783,7 @@ footer {
 footer h4 {
   font-weight: bolder;
   text-transform: uppercase;
+  margin-top: 17px;
 }
 
 footer p {
@@ -792,4 +799,6 @@ footer p {
 body {
   background: #f9f4f0;
   /*overflow-x: hidden;*/
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
