--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -9,6 +9,7 @@
 @use 'sections/home-sections';
 @use 'sections/tours';
 @use 'sections/customers';
+@use 'sections/gallery';
 @use 'sections/footer';
 
 *{
