fixing gallery hover

--- a/css/style.css
+++ b/css/style.css
@@ -784,6 +784,12 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.photo-item:hover .photo-overlay {
+  opacity: 1;
 }
 
 .heart-btn {
