--- a/css/sass/sections/_gallery.scss
+++ b/css/sass/sections/_gallery.scss
@@ -59,11 +59,16 @@
 }
 
 .photo-overlay{
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
 
+.photo-item:hover .photo-overlay{
+ opacity: 1;
 }
 
 .heart-btn{
