--- a/css/sass/sections/_hearder.scss
+++ b/css/sass/sections/_hearder.scss
@@ -18,11 +18,8 @@
 }
 
 .nav-desktop  a {
-    
-  
    font-size: 18px;
    font-weight: 500;
-   color: colors.$white-light;
    margin-right: 20px;
    padding: 10px;
    text-shadow: 1px 1px 4px rgba(0,0,0,0.7);
@@ -39,7 +36,10 @@
 
 .submenuDesktop{
   position: absolute;
-  background-color: aquamarine;
+  //background-color: rgba(255, 255, 255, 0.95);
+  background: transparent;
+  
+  border-radius: 5px;
   
   padding-bottom: 15px;
   display: none;
@@ -48,9 +48,13 @@
   li{
     list-style: none;
     padding-top: 20px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.95);
+    font-size: 29px;
     
   }
 }
+
+
 
 .submenuDesktop.open{
   display: flex;
@@ -60,12 +64,12 @@
 
 .logo{
     
-    width: 50px;
-    height: 50px;
+    
 
     // Mobile: centraliza forçadamente
     @include mixin.responsive(mobile){
         margin: 0 auto;
+       
     }
 
     /* Mobile: centraliza forçadamente
@@ -75,6 +79,13 @@
     z-index: 1;
   } */
     
+}
+
+.logoImg{
+  width: 180px;
+
+  margin-top: 5px;
+
 }
 
 
